adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos officia amet in aut exercitationem illum porro quam modi? Ex rem aspernatur eaque, eius architecto cupiditate est iste mollitia sint repellat.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel eius accusamus tempore expedita similique optio veniam repellendus consequatur velit saepe! Quo enim eligendi a. Consequatur temporibus fugit aliquam recusandae vero.</p>
 </body>
 </html>
